--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
         types: [json]
         require_serial: true
         additional_dependencies: &jsonc
-        -   "json-with-comments @ https://github.com/Krutyi-4el/json-with-comments/archive/3d501ae7fca3ee137cd6cca55091dfa4afdee069.zip"
+        -   "json-with-comments==1.2.1"
 
     -   id: update-dockerfile
         name: update-dockerfile
