--- a/.github/workflows/update-pre-commit.yml
+++ b/.github/workflows/update-pre-commit.yml
@@ -21,6 +21,14 @@ jobs:
       - name: Run pre-commit autoupdate
         run: pre-commit autoupdate
 
+      - name: Sync json-with-comments
+        run: |
+          pattern='"json-with-comments==[^"]+"'
+          content=$(cat .pre-commit-config.yaml)
+          current=$(echo "$content" | grep -Eo "$pattern")
+          actual=$(grep -Eo "$pattern" config/pyproject.toml)
+          echo "${content/$current/$actual}" > .pre-commit-config.yaml
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
