--- a/config/pyproject.toml
+++ b/config/pyproject.toml
@@ -1,8 +1,8 @@
 [build-system]
 requires = [
-   "setuptools",
-   "wheel",
-   "tomli; python_version<'3.11'",
+   "setuptools==69.1.0",
+   "wheel==0.42.0",
+   "tomli==2.0.1; python_version<'3.11'",
    "json-with-comments==1.2.2",
 ]
 
