--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 py-cord[voice] @ https://github.com/solaluset/pycord/releases/download/v2.7.2/py_cord-2.7.2-py3-none-any.whl
 yt-dlp[default,curl-cffi]==2026.2.21
+bgutil-ytdlp-pot-provider==1.2.2
 aiohttp==3.13.3
 beautifulsoup4==4.14.3
 spotipy==2.25.2
